--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="content__container">
 		<div class="text ghiocint__text">
 			<h2 class="content__title">Zambilă</h2>
-			<p>Primele flori de primăvară care îmi vin în minte sunt, desigur, ghiocei. Mici și albe ca zăpada, ele apar chiar și atunci când există nori de zăpadă în jur</p>
+			<p>Zambilele sunt una dintre cele mai vechi flori de primăvară. Bulbul este dens, format din frunze inferioare cărnoase care ocupă întreaga circumferință a fundului bulbului cu bazele lor.</p>
 		</div>
 		<img src="ghiocint.png" alt="" height="500px">
 	</div>
@@ -59,7 +59,7 @@
 		<img class="narcissus__image" src="narcissus.png" alt="" width="500px">
 		<div class="text narcissus__text">
 			<h2 class="content__title">Narcis</h2>
-			<p>Primele flori de primăvară care îmi vin în minte sunt, desigur, ghiocei. Mici și albe ca zăpada, ele apar chiar și atunci când există nori de zăpadă în jur</p>
+			<p>Acestea sunt ierburi cu bulbi densi și frunze asemănătoare panglicilor de diferite lățimi. Florile stau pe vârfurile tulpinilor fără frunze, îmbrăcate într-o folie filmată.Periantul are formă de petală, sub formă de pâlnie tubulară, trecând în partea de sus într-un membru orizontal răspândit sau îndoit, format din 6 părți egale. În gât există o coroană sub formă de clopot sau o farfurioară mai mult sau mai puțin adâncă, solidă sau lobată</p>
 		</div>
 	</div>
 </div>
